--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,11 @@
 			<artifactId>lightcouch</artifactId>
 			<version>0.0.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-test</artifactId>
+			<version>2.10.0</version>
+		</dependency>
 	</dependencies>
 
 
